--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voice con JavaScrpit Ivan</title>
+    <title>Voice Comandos Ivan</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
 <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
@@ -59,7 +59,8 @@
                     como objetivo permitir la comunicación hablada entre seres humanos y computadoras</h5>
                     <div class="container">
                         <form action="" method="get" target="_blank" id="search-form">
-                            <p>Comandos de voz:  "detener", "borrar",  "busca múltiple"  "salir del sitio".
+                            <p> Comandos de voz:  "borrar",  "busca múltiple"  "salir del sitio", "ayuda del sitio".<br>
+
                                 Para realizar una búsqueda en un sitio específico; solo menciona el sitio web. </p>
                             <input name="q" type="text" placeholder="Buscador" autocomplete="off" autofocus>
                         <!--<button type="button"><i class="fas fa-microphone"></i></button> -->
